Fixed text spacing and text size on mobile

--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -445,6 +445,10 @@ footer {
                 }
             }
         }
+
+        @media (min-width: 768px) and (max-width: 1199px) {
+            font-size: 1.375rem;
+        }
     }
 
     h4 {
